# start_cmake

./: CMakeLists.txt  README.md  build.sh  c_flag_overrides.cmake  cxx_flag_overrides.cmake
cmake/: msvc_static_runtime.cmake
src/dynamic_lib/: CMakeLists.txt  public.cpp  public.h
src/static_lib/: CMakeLists.txt  public.cpp  public.h
src/testlib/: CMakeLists.txt  main.cpp
